corrected img file path

--- a/city_map.html
+++ b/city_map.html
@@ -30,7 +30,7 @@
             
                 <div class ="feature_card">
                     <h4> Royal Palace (Kungliga Slottet)</h4>
-                    <img src="../website/assets/images/citymap.jpg" class="responsive_img" alt="Royal Palace" width="100%" height="auto">
+                    <img src="./assets/images/citymap.jpg" class="responsive_img" alt="Royal Palace" width="100%" height="auto">
                     <p>Stockholm City Map </p> 
                 </div>
 
