--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             <article>
                 <div class ="feature_card">
                 <h4> Contact Us</h4>
-                <form action="mailto: chaitalideore@gmail.com" method="POST" enctype="text/plain" class="user-information">
+                <form action="mailto: someone@gmail.comm" method="POST" enctype="text/plain" class="user-information">
                 <fieldset>
                 <legend>Your name</legend>
                 <div class="user-input">
