--- a/hotels.html
+++ b/hotels.html
@@ -7,8 +7,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../website/styles/style.css">
-    <link rel="stylesheet" href="../website/styles/hotels.css">
+    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./styles/attractions.css">
+    <link rel="stylesheet" href="./styles/hotels.css">
 </head>
 <body>
     <header class="lora-custom">
@@ -29,7 +30,7 @@
         <section class="container">           
           
             <article class="imgbox">
-            <img src="../website/assets/images/hotels.jpg" alt="Stockholm Hotels" width="100%" height="auto"> 
+            <img src="./assets/images/hotels.jpg" alt="Stockholm Hotels" width="100%" height="auto"> 
             </article>    
             <article class="description_box lora-custom">
                 <h2 style="color: aliceblue; padding:20px;">Stockholm Hotels</h2>
