--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="container">
             <article class ="imgbox">
-                <img src="../website/assets/images/Stockholms.png" alt="Stockholm Image"  width="100%" height=auto> 
+                <img src="./assets/images/Stockholms.png" alt="Stockholm Image"  width="100%" height=auto> 
             </article>    
             <article class ="description_box lora-custom ">
                     <h2 style ="color: aliceblue; padding:20px;">Why to visit Stockholm ? </h2>
