Contact US form added

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <header class="lora-custom">
         <h1>Stockholm Guide </h1>
-        <h6 class="subtitle">The Complete Guide For  City !</h6>
+        <h6 class="subtitle">The Complete Guide For Stockholm City !</h6>
     </header>
     <nav class="navbar">
         <ul>           
@@ -20,6 +20,7 @@
             <li><a href="hotels.html" target="_self">Hotels</a></li>
             <li><a href="city_map.html" target="_self">City Map</a></li>
             <li><a href="contact.html" target="_self">Contact US</a></li>
+
         </ul>
     </nav>
     <main>
