Fixed color schema for website

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
             <article class ="imgbox">
                 <img src="./assets/images/Stockholms.png" alt="Stockholm Image"  width="100%" height=auto> 
             </article>    
-            <article class ="description_box lora-custom ">
-                    <h2 style ="color: aliceblue; padding:20px;">Why to visit Stockholm ? </h2>
-                    <p class="intro-text">Experience Scandinavia's crown jewel, where centuries of history seamlessly blend with cutting-edge innovation. Stockholm's unique archipelago setting across 14 interconnected islands offers visitors an unparalleled journey through Nordic culture, architecture, and natural splendor.</p>                   
+            <article class ="feature_card lora-custom ">
+                    <h2 style ="color: #1d0ea9; padding:20px;">Why to visit Stockholm ? </h2>
+                    <p class="intro-text">Experience Scandinavia's crown jewel, where centuries of history seamlessly blend with cutting-edge innovation. 
+                        Stockholm's unique archipelago setting across 14 interconnected islands offers visitors an unparalleled journey through Nordic culture, architecture, and natural splendor.</p>                   
                     <div class="feature_card">
                         <h4>Rich History</h4>
                         <p>Explore medieval streets in Gamla Stan, visit the Royal Palace, and discover 700 years of Swedish history.</p>
