--- a/contact.html
+++ b/contact.html
@@ -26,9 +26,14 @@
     </nav>
     <main> 
         <section class="container">  
-            <article class ="imgbox">
-                
+            <article class ="imgbox_contact">
                     <img src="./assets/images/contact_us_pic.png" alt="Contact Us Image" class="contact_image"/>
+                    <div>
+                    <h2>We'd Love to Hear From You!</h2>
+                    <p class="intro-text">Whether you have questions about Stockholm, 
+                        need travel tips, or want to share your experiences, we're here to help. Fill out the form below, and we'll get back to you as soon as possible.</p>
+
+                    </div>
               
             </article>                  
             <article class ="description_box lora-custom ">
