Contact form UI changed

--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
                     </div>
               
             </article>                  
-            <article class ="description_box lora-custom ">
+            <article class ="description_box_contact lora-custom ">
                 <div class ="feature_card">
                 <h2>Get In Touch </h2>
                 <form id="contactForm" action="mailto:someone@gmail.com" method="POST" enctype="text/plain" class="user-information">
