--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </main>
     
     <footer class="footer">
-        <p>&copy; 2025 Stockholm Guide | All rights reserved.</p>
+        <p>&copy; 2025 Stockholm Guide | All rights reserved | Chaitali Deore</p>
     </footer>
 </body>
 </html>
